--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,9 +4,9 @@
 @import "minima";
 
 .site-title::before {
-    content: url("/assets/img/cropped-Mouse-drawing-small.jpg");
-    display: inline-block;
-    position: relative;
-    width: 150px;
-    top: 10px;
+	content: url("/assets/LogoRaro.jpg");
+	display: inline-block;
+	position: relative;
+	width: 35px;
+	top: 10px;
 }
