--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,7 +4,7 @@
 @import "minima";
 
 .site-title::before {
-	content: url("/assets/LogoRaro.jpg");
+	content: url("/assets/img/LogoRaro.jpg");
 	display: inline-block;
 	position: relative;
 	width: 35px;
